change color of buttons in admin_panel

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,22 +2,22 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .approve-investors {
-  color: #000;
+  color: #fff;
   font-family: 'Roboto', sans-serif !important;
 }
 
 .approve-startups {
-  color: #000;
+  color: #ff;
   font-family: 'Roboto', sans-serif !important;
 }
 
 .approve-users {
-  color: #000;
+  color: #fff;
   font-family: 'Roboto', sans-serif !important;
 }
 
 .admin-page-fields {
-  color: white;
+  color: #fff;
   font-family: 'Roboto', sans-serif !important;
 }
 
