add dark background to admin panel

--- a/app/views/users/admin_panel.html.erb
+++ b/app/views/users/admin_panel.html.erb
@@ -1,5 +1,5 @@
 <div class="row space">
-  <div class="col-xs-12 white-font table-border">
+  <div class="col-xs-12 white-font dark-bg">
 
     <h3 class="approve-investors"> List of investors to be approved: </h3>
       <table class="table">
@@ -36,7 +36,7 @@
 </div>
 
 <div class="row space">
-  <div class="col-xs-12 white-font table-border">
+  <div class="col-xs-12 white-font dark-bg">
     <h3 class="approve-startups"> List of startups to be approved: </h3>
       <table class="table">
         <thead>
@@ -71,7 +71,7 @@
 </div>
 
 <div class="row space">
-  <div class="col-xs-12 white-font table-border">
+  <div class="col-xs-12 white-font dark-bg">
     <h3 class="approve-users"> List of users to be approved: </h3>
       <table class="table">
         <thead>
