--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -21,5 +21,10 @@
   font-family: 'Roboto', sans-serif !important;
 }
 
+.dark-bg {
+  background-color: rgba(black, 0.7);
+  border-radius: 25px;
+  padding: 20px;
+}
 
 // extra styles
